Update doc pages, add "edit on github" links, mobile "jump to" menu

--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -1,33 +1,11 @@
+![Open Source A/B Testing](/images/hero.png)
+
 # Growth Book Docs
 
-If you are using Growth Book for 
-the first time, we recommend you start 
-with the [Quick Start](/quick-start)
+Growth Book is split into 2 parts: the **Growth Book App** and **Client Libraries**.
 
-## Setup and Integration
+The [Growth Book App](/app) is where you manage your A/B tests and analyze results.
 
-Growth Book queries your data where it lives.  We integrate with several different [Data Sources](/sources):
+The [Client Libraries](/lib) are how you actually implement the A/B tests in your application.
 
--  [AWS Athena](/sources/athena)
--  [Redshift](/sources/redshift)
--  [Snowflake](/sources/snowflake)
--  [BigQuery](/sources/bigquery)
--  [Postgres](/sources/postgres)
--  [Mixpanel](/sources/mixpanel)
--  [Google Analytics](/sources/ga)
-
-Growth Book is built to run experiments on any platform.  We offer official client libraries in a few popular languages with more coming soon:
-
-*  Javascript/Typescript - <https://github.com/growthbook/growthbook-js>
-*  ReactJS - <https://github.com/growthbook/growthbook-react>
-*  PHP - <https://github.com/growthbook/growthbook-php>
-*  Ruby - <https://github.com/growthbook/growthbook-ruby>
-*  Go - *coming soon*
-*  Python - *coming soon*
-
-## Using Growth Book
-
-The Growth Book application has several sections. The below pages contain more detailed information about them:
-
--  [Experiments](/experiments)
--  [Metrics](/metrics)
+Use the menu or the Previous/Next links at the bottom to navigate.
