--- a/packages/docs/pages/api-docs.mdx
+++ b/packages/docs/pages/api-docs.mdx
@@ -1,120 +1,56 @@
 # API
 
-Our API is pretty easy to integrate into any tech stack.
+The Growth Book API is pretty easy to integrate into any tech stack.
 
 To get started, on the Growth Book settings page, generate an API key.
 
-As of right now, there is only a single API endpoint:  https://cdn.growthbook.io/config/{apiKey} 
+As of right now, there is only a single public API endpoint: `/config/{apiKey}`.  If you are using Managed Growth Book (https://app.growthbook.io), the endpoint is accessible from our global CDN: https://cdn.growthbook.io/config/{apiKey}.  
 
 This returns configuration info for every experiment. 
-It can be passed directly into our open source client libraries or you can use the info to implement your own variation assignment and targeting.
+It can be passed directly into our client libraries or you can use the info to implement your own variation assignment and targeting.
 
-Here is the Typescript type definition with comments:
-
-```ts
-type DetailedVariationData = {
-  // The tracking key for the variation (defaults to "0" for control, "1" for variation 1, etc.)
-  key?: string;
-  // Determines traffic split. Float from 0 to 1, weights for all variations must sum to 1.
-  weight?: number;
-  // Arbitrary data attached to the variation. Used to parameterize experiments.
-  data?: {
-    [key: string]: any;
-  };
-  // CSS rules that should be injected to the page if this variation is chosen
-  css?: string;
-  // DOM modifications that should be applied if this variation is chosen
-  dom?: {
-    selector: string;
-    action: "append" | "set" | "remove";
-    attribute: string;
-    value: string;
-  }[];
-}
-
-type Response = {
-  status: 200;
-  // Array of experiment objects
-  experiments: {
-    // The globally unique tracking key for the experiment
-    key: string;
-    // "draft" should only be used for QA
-    status: "draft" | "running" | "stopped";
-    // What percent of users should be included in the experiment. Float from 0 to 1.
-    coverage?: number;
-    // Users can only be included in this experiment if the current URL matches this regex
-    url?: string;
-    // Array of strings if the format "{key} {operator} {value}"
-    // Users must pass all of these targeting rules to be included in this experiment
-    targeting?: string[];
-    // If specified, all users included in the experiment should be forced into the 
-    // specified variation (0 is control, 1 is first variation, etc.)
-    force?: number;
-    // If true, use anonymous id for assigning, otherwise use logged-in user id
-    anon: boolean;
-    // If true, users who match all targeting rules should automatically be put into the test
-    auto: boolean;
-    // Number of variations or an array of more detailed info
-    variations: number | DetailedVariationData[];
-  }[];
-}
-```
-
-And here is an example response:
+Here is an example API response:
 
 ```json
 {
   "status": 200,
-  "experiments": [
-    {
-      "key": "my-test",
-      "stats": "running",
-      "coverage": 0.6,
-      "url": "^/post/[0-9]+",
+  "overrides": {
+    "experiment-key": {
+      "status": "running",
+      "weights": [0.5, 0.5],
+      "coverage": 1,
       "targeting": [
-        "source = google"
+        "age > 18"
       ],
-      "anon": true,
-      "variations": [
-        {
-          "key": "A",
-          "weight": 0.8
-        },
-        {
-          "key": "B",
-          "weight": 0.2,
-          "css": "button.cta { background: green; }",
-          "dom": [
-            {
-              "selector": "h1",
-              "action": "set",
-              "attribute": "html",
-              "value": "Click The Green Button"
-            }
-          ]
-        }
-      ]
+      "url": "^/post/[0-9]+$"
     },
-    {
-      "key": "my-stopped-test",
+    "another-experiment": {
       "status": "stopped",
-      "variations": 3,
-      "anon": true,
-      "force": 1
+      "force": 2
     }
-  ]
+  }
 }
 ```
 
-The top-level `status` field mirrors the HTTP response code.
+The `status` field just mirrors the HTTP status code.
+
+The `overrides` field has one entry per experiment with overrides that should take precedence over hard-coded values in your code.
+
+-  **status** - Either "draft", "running", or "stopped".  Stopped experiments are only included in the response if a non-control variation won.
+-  **weights** - How traffic should be weighted between variations. Will add up to 1.
+-  **coverage** - A float from 0 to 1 (inclusive) which specifies what percent of users to include in the experiment.
+-  **targeting** - An array of targeting rules for who is eligible. There is an implied "AND" between the rules.
+-  **url** - A regex for which URLs the experiment should run on
+-  **force** - Force all users to see the specified variation index (`0` = control, `1` = first variation, etc.).
+
 
 ## Official Client Libraries
 
 We offer official client libraries that work with these data structures in a few popular languages with more coming soon.
 
-*  Javascript/Typescript - <https://github.com/growthbook/growthbook-js>
-*  ReactJS - <https://github.com/growthbook/growthbook-react>
-*  PHP - <https://github.com/growthbook/growthbook-php>
-*  Ruby - <https://github.com/growthbook/growthbook-ruby>
+*  [Javascript/Typescript](/lib/js)
+*  [React](/lib/react)
+*  [PHP](/lib/php)
+*  [Ruby](/lib/ruby)
 *  Go - *coming soon*
 *  Python - *coming soon*
