Remove targeting and segments from experiments. Add user groups instead.

--- a/packages/docs/pages/app/experiments.mdx
+++ b/packages/docs/pages/app/experiments.mdx
@@ -22,7 +22,7 @@ Use the built-in discussion thread to add comments or collect feedback.
 
 There are a few different ways to limit your experiment to a subset of users:
 
-1.  Specify a pre-defined **Segment**
+1.  Select specific user groups to include (e.g. internal employees, beta testers)
 2.  Limit to logged-in users only
 3.  Specify a URL regex pattern
 4.  Custom targeting rules (e.g. `age > 18`)
