--- a/packages/docs/pages/api-docs.mdx
+++ b/packages/docs/pages/api-docs.mdx
@@ -19,9 +19,7 @@ Here is an example API response:
       "status": "running",
       "weights": [0.5, 0.5],
       "coverage": 1,
-      "targeting": [
-        "age > 18"
-      ],
+      "groups": ["beta"],
       "url": "^/post/[0-9]+$"
     },
     "another-experiment": {
@@ -39,7 +37,7 @@ The `overrides` field has one entry per experiment with overrides that should ta
 -  **status** - Either "draft", "running", or "stopped".  Stopped experiments are only included in the response if a non-control variation won.
 -  **weights** - How traffic should be weighted between variations. Will add up to 1.
 -  **coverage** - A float from 0 to 1 (inclusive) which specifies what percent of users to include in the experiment.
--  **targeting** - An array of targeting rules for who is eligible. There is an implied "AND" between the rules.
+-  **groups** - An array of user groups who are eligible for the experiment
 -  **url** - A regex for which URLs the experiment should run on
 -  **force** - Force all users to see the specified variation index (`0` = control, `1` = first variation, etc.).
 
