Update docs for javascript and react client libraries.

--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -9,3 +9,7 @@ The [Growth Book App](/app) is where you manage your A/B tests and analyze resul
 The [Client Libraries](/lib) are how you actually implement the A/B tests in your application.
 
 Use the menu or the Previous/Next links at the bottom to navigate.
+
+## Slack Community
+
+[Join us on Slack](https://join.slack.com/t/growthbookusers/shared_invite/zt-oiq9s1qd-dHHvw4xjpnoRV1QQrq6vUg) if you need help, want to chat, or are thinking of a new feature. We're here to help - and to make Growth Book even better.
