--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -76,7 +76,7 @@ Dev Mode adds a variation switcher UI that floats on the bottom left of pages.  
 
 [View Live Demo](https://growthbook.github.io/growthbook-react/)
 
-![Dev Mode Variation Switcher](variation-switcher.png)
+![Dev Mode Variation Switcher](/images/variation-switcher.png)
 
 ## Experiments
 
