--- a/packages/docs/pages/app/metrics.mdx
+++ b/packages/docs/pages/app/metrics.mdx
@@ -4,7 +4,7 @@ Metrics are what your experiments are trying to optimize.  Growth Book has a ver
 
 ## Conversion Types
 
-Metrics can have different statistical distributions. Below are the ones Growth Book supports or plans to support in the future:
+Metrics can have different statistical distributions. Below are the ones Growth Book supports:
 
 | Conversion Type | Description                               | Example                  |
 |-----------------|-------------------------------------------|--------------------------|
@@ -15,16 +15,43 @@ Metrics can have different statistical distributions. Below are the ones Growth 
 
 Need a metric type we don't support yet?  Let us know!
 
-## User Id and Timestamp Columns
+## Query settings
 
-When setting up your data source, you specified the default column names for User Id and Timestamp.
+For metrics to work, you need to tell Growth Book how to query the data from your data source. There are 2 ways to do this:
 
-When creating a metric, you have the option to override these if you need to.  Otherwise, just leave the fields blank to use the default.
+### 1. SQL (recommended)
 
-## Conditions
+If your data source supports SQL, this is the preferred way to define metrics. You can use joins, subselects, or anything else supported by your SQL dialect.
 
-Conditions are a simple way to filter the underlying data.  For example, if you have a SQL table that records every time a user watches a video, you may want
-to add a metric "Watched Short Comedy Video". You only want to include a subset of the rows in the table, so you would add 2 conditions: `genre = "comedy"` and `length < 60`.
+Your SELECT statement should return one row per "conversion event". This may be a page view, a purchase, a session, or something else.
 
-Sometimes, you need to join multiple tables together for a metric.  In the above example, if your data was normalized, the "user watched a video" table probably doesn't have the genre and length directly.
-You would need to join to the video table to get that info.  In these more complex cases, we recommend defining Views directly in your database instead. This makes it easier and more efficient to query, especially if your data source supports Materialized Views.
+Example:
+```sql
+SELECT
+  user_id as user_id,
+  anon_id as anonymous_id,
+  amount as value,
+  received_at as timestamp
+FROM
+  purchases
+```
+
+Binomial metrics don't need a `value` column (the existence of a row means the user converted).
+
+Also, your metric may only support logged-in or anonymous users, in which case you can omit the other type of id.
+
+For example, a binomial metric that only supports logged-in users would look like this:
+
+```sql
+SELECT
+  user_id as user_id,
+  received_at as timestamp
+FROM
+  registrations
+```
+
+### 2. Query Builder (legacy)
+
+The query builder prompts you for things such as table/column names and constructs a query behind the scenes.
+
+For non-SQL data sources (e.g. Google Analytics, Mixpanel), this is the only option. Otherwise, if you data sources supports it, inputting raw SQL is easier and more flexible.
