--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -1,14 +1,8 @@
-![Open Source A/B Testing](/images/hero.png)
-
 # Growth Book Docs
 
-Growth Book is split into 2 parts: the **Growth Book App** and **Client Libraries**.
+![Growth Book: The Open Source A/B Testing Platform](/images/hero.png)
 
-The [Growth Book App](/app) is where you manage your A/B tests and analyze results.
-
-The [Client Libraries](/lib) are how you actually implement the A/B tests in your application.
-
-Use the menu or the Previous/Next links at the bottom to navigate.
+Use the menu or the Previous/Next links at the bottom to navigate these docs.
 
 ## Slack Community
 
